<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/android">

    <!-- Add to Folder -->
    <item
        android:id="@+id/action_add_to_folder"
        android:icon="@drawable/ic_add"
        android:title="@string/add_to_folder"
        app:showAsAction="ifRoom" />

    <!-- Sort Folder Contents -->
    <item
        android:id="@+id/action_sort_folder"
        android:icon="@drawable/ic_sort"
        android:title="@string/sort"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/action_sort_folder_name"
                android:checkable="true"
                android:checked="true"
                android:title="@string/sort_by_name" />
            <item
                android:id="@+id/action_sort_folder_date"
                android:checkable="true"
                android:title="@string/sort_by_date" />
            <item
                android:id="@+id/action_sort_folder_size"
                android:checkable="true"
                android:title="@string/sort_by_size" />
            <item
                android:id="@+id/action_sort_folder_type"
                android:checkable="true"
                android:title="@string/sort_by_type" />
        </menu>

    </item>

    <!-- View Mode in Folder -->
    <item
        android:id="@+id/action_view_mode"
        android:icon="@drawable/ic_view_module"
        android:title="@string/view_mode"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/action_view_grid"
                android:checkable="true"
                android:checked="true"
                android:title="@string/grid_view" />
            <item
                android:id="@+id/action_view_list"
                android:checkable="true"
                android:title="@string/list_view" />
            <item
                android:id="@+id/action_view_compact"
                android:checkable="true"
                android:title="@string/compact_view" />
        </menu>

    </item>

    <!-- Folder Actions -->
    <item
        android:id="@+id/action_folder_actions"
        android:icon="@drawable/ic_more_vert"
        android:title="@string/folder_actions"
        app:showAsAction="ifRoom">

        <menu>
            <!-- Rename Folder -->
            <item
                android:id="@+id/action_rename_folder"
                android:title="@string/rename_folder" />

            <!-- Move Folder -->
            <item
                android:id="@+id/action_move_folder"
                android:title="@string/move_folder" />

            <!-- Copy Folder -->
            <item
                android:id="@+id/action_copy_folder"
                android:title="@string/copy_folder" />

            <!-- Share Folder -->
            <item
                android:id="@+id/action_share_folder"
                android:title="@string/share_folder" />

            <!-- Folder Properties -->
            <item
                android:id="@+id/action_folder_properties"
                android:title="@string/folder_properties" />

            <!-- Export Folder -->
            <item
                android:id="@+id/action_export_folder"
                android:title="@string/export_folder" />

            <!-- Empty Folder -->
            <item
                android:id="@+id/action_empty_folder"
                android:title="@string/empty_folder" />

            <!-- Delete Folder -->
            <item
                android:id="@+id/action_delete_folder"
                android:title="@string/delete_folder" />

        </menu>

    </item>

</menu>