<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/android">

    <!-- Empty Bin -->
    <item
        android:id="@+id/action_empty_bin"
        android:icon="@drawable/ic_delete_forever"
        android:title="@string/empty_bin"
        app:showAsAction="ifRoom" />

    <!-- Restore All -->
    <item
        android:id="@+id/action_restore_all"
        android:icon="@drawable/ic_restore"
        android:title="@string/restore_all"
        app:showAsAction="ifRoom" />

    <!-- Select Multiple -->
    <item
        android:id="@+id/action_select_multiple"
        android:icon="@drawable/ic_select_all"
        android:title="@string/select_multiple"
        app:showAsAction="ifRoom" />

    <!-- Sort Bin -->
    <item
        android:id="@+id/action_sort_bin"
        android:icon="@drawable/ic_sort"
        android:title="@string/sort"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/action_sort_bin_date"
                android:checkable="true"
                android:checked="true"
                android:title="@string/sort_by_deletion_date" />
            <item
                android:id="@+id/action_sort_bin_name"
                android:checkable="true"
                android:title="@string/sort_by_name" />
            <item
                android:id="@+id/action_sort_bin_size"
                android:checkable="true"
                android:title="@string/sort_by_size" />
        </menu>

    </item>

</menu>